--- a/templates/groups/add_group_member.html
+++ b/templates/groups/add_group_member.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5 text-center fw-bold">Add Group Member</h1>
+          <h1 class="modal-title fs-5 text-center fw-bold">Add Bible Study Group Member</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
             <form action="{% url 'new-group-member' %}" method="POST" enctype="multipart/form-data">
