--- a/templates/home.html
+++ b/templates/home.html
@@ -411,7 +411,7 @@
                         borderColor: colors.borderColor,
                         backgroundColor: colors.backgroundColor,
                         borderWidth: isOverall ? 3 : 2,
-                        borderDash: isOverall ? [5, 5] : [],
+                        //borderDash: isOverall ? [5, 5] : [],
                         tension: 0.3,
                         fill: !isOverall,      // Fill only for gender lines
                         pointRadius: isOverall ? 4 : 3,
