--- a/templates/attendances/attendances.html
+++ b/templates/attendances/attendances.html
@@ -6,14 +6,14 @@
 <div class="table-card">
     <div class="row py-3 px-2">
         <div class="col">
-            <h3>Church Attendance</h3>
+            <h3 class="fw-bold">Church Attendance</h3>
         </div>
         <div class="col">
             <input type="text" class="form-control" placeholder="Search..." 
             id="searchInput" value="{{ search_query }}">
         </div>
         <div class="col">
-            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newAttendanceModal">New Attendance</button>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newAttendanceModal">Record Attendance</button>
         
           </div>
     </div>
