--- a/templates/attendances/service_attendances.html
+++ b/templates/attendances/service_attendances.html
@@ -6,7 +6,7 @@
 <div class="table-card">
     <div class="row py-3 px-2">
         <div class="col">
-            <h3>Service Attendance</h3>
+            <h3 class="fw-bold">Service Attendance</h3>
         </div>
         <div class="col">
             <input type="text" class="form-control" placeholder="Search..." 
@@ -30,7 +30,7 @@
                     <th>Service</th>
                     <th>Gender</th>
                     <th>Present</th>
-                    <th>Recorded At</th>
+                    <th>Service Date</th>
                 </tr>
             </thead>
             <tbody id="tableBody">
@@ -40,11 +40,11 @@
                     <td>{{ attendance.service.name }}</td>
                     <td>{{ attendance.gender }}</td>
                     <td>{{ attendance.total_present }}</td>
-                    <td>{{ attendance.created_at }}</td>
+                    <td>{{ attendance.service_date }}</td>
                 </tr>
                 {% empty %}
                 <tr>
-                    <td colspan="8" class="text-center py-4">
+                    <td colspan="5" class="text-center py-4">
                         No Attendance found
                     </td>
                 </tr>
