--- a/templates/groups/groups.html
+++ b/templates/groups/groups.html
@@ -6,14 +6,14 @@
 <div class="table-card">
     <div class="row py-3 px-2">
         <div class="col">
-            <h3>Church Groups</h3>
+            <h3 class="fw-bold">Bible Study Groups</h3>
         </div>
         <div class="col">
             <input type="text" class="form-control" placeholder="Search..." 
             id="searchInput" value="{{ search_query }}">
         </div>
         <div class="col">
-            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newGroupModal">Add Group</button>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newGroupModal">Add Bible Study Group</button>
           </div>
     </div>
  
