--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,6 +1,6 @@
 <nav id="sidebar">
     <div class="sidebar-header d-flex justify-content-between align-items-center">
-        <span class="text-white link-text">CHURCH ERP</span>
+        <span class="text-white link-text">KANISA CLOUD</span>
         <button class="hamburger" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
         </button>
@@ -15,7 +15,6 @@
                     <span class="link-text">Dashboard</span>
                 </a>
             </li>
-
             <!-- Memberships Section -->
             <li>
                 <a href="#" class="dropdown-toggle nav-link" data-bs-toggle="collapse" aria-expanded="false">
@@ -59,7 +58,9 @@
                 <ul class="collapse submenu">
                     <li><a href="{% url 'projects' %}" class="nav-link"><i class="fas fa-clipboard-list me-2"></i> Projects</a></li>
                     <li><a href="{% url 'contributions' %}" class="nav-link"><i class="fas fa-hand-holding-usd me-2"></i> Contributions</a></li>
+                    <!--
                     <li><a href="{% url 'pledges' %}" class="nav-link"><i class="fas fa-file-signature me-2"></i> Pledges</a></li>
+                    -->
                 </ul>
             </li>
 
@@ -99,7 +100,7 @@
                     <i class="fas fa-angle-down ms-auto small opacity-75"></i>
                 </a>
                 <ul class="collapse submenu">
-                    <li><a href="#" class="nav-link"><i class="fas fa-bell me-2"></i> Church Events</a></li>
+                    <li><a href="{% url 'events' %}" class="nav-link"><i class="fas fa-bell me-2"></i> Church Events</a></li>
                 </ul>
             </li>
 
