--- a/templates/projects/project_details.html
+++ b/templates/projects/project_details.html
@@ -1,5 +1,177 @@
 {% extends "base.html" %}
 
 {% block content %}
+<!-- Stats Row -->
+<div class="dashboard">
+    <div class="row g-4 mb-4">
+       <div class="col-xl-6 col-md-6">
+            <div class="card card-stat h-80">
+                <div class="card-body">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div>
+                            <h6 class="text-church-primary">PROJECT NAME</h6>
+                            <h3 class="text-church-secondary">{{project.name}}</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-xl-6 col-md-6">
+        <div class="card card-stat h-80">
+            <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div>
+                        <h6 class="text-church-primary">TOTAL BUDGET</h6>
+                        <h3 class="text-church-secondary">{{project.total_budget}} Kes.</h3>
+                    </div>
+                    <i class="fas fa-hand-holding-heart stats-icon text-church-gold"></i>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    </div>
+    <div class="row g-4 mb-4">
+    <div class="col-xl-6 col-md-6">
+        <div class="card card-stat h-80">
+            <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div>
+                        <h6 class="text-church-primary">TOTAL PLEDGES</h6>
+                        <h3 class="text-church-secondary">{{total_pledges}} Kes.</h3>
+                    </div>
+                    <i class="fas fa-hand-holding-heart stats-icon text-church-gold"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-xl-6 col-md-6">
+        <div class="card card-stat h-80">
+            <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div>
+                        <h6 class="text-church-primary">TOTAL CONTRIBUTIONS</h6>
+                        <h3 class="text-church-secondary">{{total_contributions}} Kes.</h3>
+                    </div>
+                    <i class="fas fa-church stats-icon text-church-gold"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="table-card">
+    <div class="row py-3 px-2">
+        <div class="col">
+            <h3>Projects Pledges</h3>
+        </div>
+        <div class="col">
+            <input type="text" class="form-control" placeholder="Search..." 
+            id="searchInput" value="{{ search_query }}">
+        </div>
+        <div class="col">
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newPledgeModal{{project.id}}">Record Pledge</button>
+          </div>
+    </div>
+    {% include "projects/pledges/new_pledge.html" %}
+ 
+    <div class="loader" id="loader"></div>
+
+    <!-- Table Container -->
+    <div class="table-container px-2">
+        <table class="table data-table table-sm">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Pledged By</th>
+                    <th>Pledged</th>
+                    <th>Redeemed</th>
+                    <th>Balance</th>
+                    <th>Status</th>
+                    <th>Date</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody id="tableBody">
+                {% for pledge in pledges %}
+                <tr>
+                    <td>{{ forloop.counter }}</td>
+                    <td>{{ pledge.pledger }}</td>
+                    <td>{{  pledge.amount_pledged}}</td>
+                    <td>{{  pledge.amount_redeemed}}</td>
+                    <td>{{  pledge.balance}}</td>
+                    <td>{{ pledge.status }}</td>
+                    <td>{{  pledge.created_at|date:'Y-m-d'}}</td>
+                    <td>
+                        <div class="d-flex gap-1">
+                            <a class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#editPledgeModal{{pledge.id}}"><i class="fas fa-edit"></i></a>
+                            {% if pledge.status == "Fully Redeemed" %}
+                            {% else %}
+                                <a class="btn btn-info btn-sm" data-bs-toggle="modal" data-bs-target="#redeemPledgeModal{{pledge.id}}">Redeem</a>
+                            {% endif %}
+                        </div>
+                    </td>
+                    {% include "projects/pledges/edit_pledge.html" %}
+                     {% include "projects/pledges/redeem_pledge.html" %}
+                </tr>
+                {% empty %}
+                <tr>
+                    <td colspan="8" class="text-center py-4">
+                        No branches found
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+<div class="table-footer">
+    <div class="page-info">
+        Showing 
+        {{ page_obj.start_index }} 
+        to 
+        {{ page_obj.end_index }} 
+        of 
+        {{ paginator.count }} 
+        entries
+    </div>
+    {% if is_paginated %}
+    <nav>
+        <ul class="pagination mb-0">
+            {% if page_obj.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.previous_page_number }}{% if search_query %}&search={{ search_query }}{% endif %}">
+                    Previous
+                </a>
+            </li>
+            {% else %}
+            <li class="page-item disabled">
+                <span class="page-link">Previous</span>
+            </li>
+            {% endif %}
+
+            {% for num in paginator.page_range %}
+            <li class="page-item {% if page_obj.number == num %}active{% endif %}">
+                <a class="page-link" href="?page={{ num }}{% if search_query %}&search={{ search_query }}{% endif %}">
+                    {{ num }}
+                </a>
+            </li>
+            {% endfor %}
+
+            {% if page_obj.has_next %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}{% if search_query %}&search={{ search_query }}{% endif %}">
+                    Next
+                </a>
+            </li>
+            {% else %}
+            <li class="page-item disabled">
+                <span class="page-link">Next</span>
+            </li>
+            {% endif %}
+        </ul>
+    </nav>
+    {% endif %}
+</div>
+</div>
+</div>
 {% endblock content %}
