--- a/templates/projects/projects.html
+++ b/templates/projects/projects.html
@@ -44,8 +44,8 @@
                     <td>{{  project.status}}</td>
                     <td>
                         <div class="d-flex gap-1">
+                            <a href="{% url 'project-detail' project.id %}" class="btn btn-info btn-sm"><i class="fas fa-eye"></i></a>
                             <a class="btn btn-secondary btn-sm" data-bs-toggle="modal" data-bs-target="#editProjectModal{{project.id}}"><i class="fas fa-edit"></i></a>
-    
                         </div>
                     </td>
                     {% include "projects/edit_project.html" %}
