--- a/templates/services/new_service.html
+++ b/templates/services/new_service.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5 text-center">New Church Service</h1>
+          <h1 class="modal-title fs-5 text-center fw-bold">New Church Service</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
             <form action="{% url 'new-church-service' %}" method="POST" enctype="multipart/form-data">
