--- a/templates/services/services.html
+++ b/templates/services/services.html
@@ -6,14 +6,14 @@
 <div class="table-card">
     <div class="row py-3 px-2">
         <div class="col">
-            <h3>Church Services</h3>
+            <h3 class="fw-bold">Church Services</h3>
         </div>
         <div class="col">
             <input type="text" class="form-control" placeholder="Search..." 
             id="searchInput" value="{{ search_query }}">
         </div>
         <div class="col">
-            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newChurchServiceModal">New Service</button>
+            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newChurchServiceModal">New Church Service</button>
           </div>
     </div>
  
