--- a/templates/visitors/new_visitor.html
+++ b/templates/visitors/new_visitor.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5 text-center">New Church Visitor</h1>
+          <h1 class="modal-title fs-5 text-center fw-bold">New Church Visitor</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
             <form action="{% url 'new-visitor' %}" method="POST" enctype="multipart/form-data">
@@ -70,14 +70,7 @@
                 </div>
 
                 <div class="row mb-3">
-                  <div class="col">
-                    <label for="exampleInputPassword1" class="form-label fw-bold">Brought By</label>
-                    <select class="form-select" id="brought_by" name="brought_by">
-                        {% for member in members %}
-                            <option value={{member.id}}>{{member.name}}</option>
-                         {% endfor %}
-                      </select>
-                  </div>
+                 
                   <div class="col">
                       <label for="exampleInputPassword1" class="form-label fw-bold">Branch</label>
                       <select class="form-select" id="branch" name="branch" required>
@@ -86,10 +79,7 @@
                         {% endfor %}
                       </select>
                     </div>
-                  </div>
-  
-                <div class="row mb-2">
-                  <div class="col">
+                    <div class="col">
                     <label for="exampleInputPassword1" class="form-label fw-bold">Address</label>
                     <input
                       type="text"
@@ -98,6 +88,10 @@
                       name="address"
                     />
                   </div>
+                  </div>
+  
+                <div class="row mb-2">
+                  
                   <div class="col">
                     <label for="exampleInputPassword1" class="form-label fw-bold">City/Town</label>
                     <input
@@ -121,7 +115,7 @@
 
                
                 <div class="text-center mt-3">
-                  <button type="submit" class="btn btn-primary w-30">Create Visitor</button>
+                  <button type="submit" class="btn btn-primary w-30">Create Church Visitor</button>
                 </div>
               </div>
               </form>
