--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
             --church-stone: #EEEEEE;            /* Light Gray - neutral */
             --church-light: #eeece0;
             --church-white: #ebe0c5;
-            --church-gold: #d4af37;
+            --church-gold: #e9d9ab;
             
             /* Semantic Colors with Church Theme */
             --primary-color: var(--church-primary);
