--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div>
                         <h6 class="text-church-primary">TOTAL TITHES</h6>
-                        <h3 class="text-church-secondary">{{tithes_total}} Kes</h3>
+                        <h3 class="text-church-secondary">{{tithes_total}} KES</h3>
                     </div>
                     <i class="fas fa-church stats-icon text-church-gold"></i>
                 </div>
@@ -42,7 +42,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div>
                         <h6 class="text-church-primary">DEPARTMENT SAVINGS</h6>
-                        <h3 class="text-church-secondary">{{total_department_savings}} Kes.</h3>
+                        <h3 class="text-church-secondary">{{total_department_savings}} KES</h3>
                     </div>
                     <i class="fas fa-piggy-bank stats-icon text-church-gold"></i>
                 </div>
@@ -56,7 +56,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div>
                         <h6 class="text-church-primary">TOTAL OFFERINGS</h6>
-                        <h3 class="text-church-secondary">{{total_offerings}} Kes</h3>
+                        <h3 class="text-church-secondary">{{total_offerings}} KES</h3>
                     </div>
                     <i class="fas fa-hand-holding-heart stats-icon text-church-gold"></i>
                 </div>
