--- a/templates/includes/district_sidebar.html
+++ b/templates/includes/district_sidebar.html
@@ -37,6 +37,7 @@
                 <ul class="collapse submenu">
                     <li><a href="{% url 'presbyters' %}" class="nav-link"><i class="fas fa-user-tie me-2"></i> Presbyters</a></li>
                     <li><a href="{% url 'district-pastors' %}" class="nav-link"><i class="fas fa-user-tie me-2"></i> Pastors</a></li>
+                    <li><a href="{% url 'district-pastor-associates' %}" class="nav-link"><i class="fas fa-user-tie me-2"></i> Pastor Associates</a></li>
                 </ul>
             </li>
             
